[metadata]
name = sphericart_torch
url = https://github.com/lab-cosmo/sphericart
# description =
long_description = file: README.md
long_description_content_type = text/markdown
# keywords =
# license =
# license_files =
# classifiers =

[options]
zip_safe = False
install_requires = torch
packages = find:
python_requires = >=3.7
package_dir =
    = python/src

[options.packages.find]
where = python/src
